[feat] indicating Launcher as main class in the manifest file.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
             <release>16</release>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.2.0</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <mainClass>com.jdepsanalyzer.Launcher</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
