--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
           <configuration>
-            <release>16</release>
+            <release>17</release>
           </configuration>
         </plugin>
         <plugin>
@@ -33,6 +33,14 @@
                 <mainClass>com.jdepsanalyzer.Launcher</mainClass>
               </manifest>
             </archive>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.8.1</version>
+          <configuration>
+            <rulesUri>file:./maven-version-rules.xml</rulesUri>
           </configuration>
         </plugin>
       </plugins>
